css/style.css
/* Common */
* {
    margin: 0;
    padding: 0;
    font-family: Arial, Helvetica, sans-serifZ;
}

html {
    font-size: 16;
}

body {
    background-color: #F6F8F9;
}

button {
    padding: 1rem;
    font-size: 1rem;
    border-radius: 0.5rem;
    margin-left: 0.2rem;
    border: none;
}

/* Utilities */
.di-ib {
    display: inline-block;
}

.fs-5rm {
    font-size: 5rem;
}

.Tsection {
    font-size: 2rem;
    font-weight: bold;
}

.task {
    font-size: 2rem;
    line-height: 3em;
}

.centered {
    width: 75%;
    margin: auto;
    background-color: white;
    padding-left: 5rem;
    padding-right: 5rem;
}

/* Header */
#app-header {
    background-color: white;
    padding-top: 1rem;
    padding-bottom: 1rem;
    padding-left: 2rem;
}

#app-header > h1 {
    vertical-align: top;
}

/* Nav */
#nav {
    margin-top: 4rem;
    padding-top: 2rem;
    padding-bottom: 1rem;
    border-top-left-radius: 1rem;
    border-top-right-radius: 1rem;
    border-bottom: 4px solid #F6F8F9;
}

button#add-task {
    background-color: none;
    color: #CED3D7;
    border: 1px solid #CED3D7;
}

button#add-section {
    background-color: #47ADF1;
    color: #E5F4FD;
}

/* Main */
#app-main {
    padding-top: 2rem;
    border-bottom-left-radius: 1rem;
    border-bottom-right-radius: 1rem;
}

section {
    margin-bottom: 2rem;
}

.etiquette::before {
    border-radius: 1.5rem;
    padding: 1rem;
    color: white;
}

.editorial::before {
    content: "Editorial";
    background-color: #47ADF1;
}

.q1goals::before {
    content: "Q1 Goals";
    background-color: #9C72E4;
}

.recruiting::before {
    content: "Recruiting";
    background-color: #64C0A9;
}

.mobile::before {
    content: "Mobile";
    background-color: #F29E33;
}

.website::before {
    content: "Website";
    background-color: #D863A1;
}

.sales::before {
    content: "Sales";
    background-color: #B0C926;
}

